Adds new content to the book.
This is the starting point for the Microservices stuff.

--- a/src/docs/asciidoc/Developer-Master.adoc
+++ b/src/docs/asciidoc/Developer-Master.adoc
@@ -22,3 +22,5 @@ include::blocks/colophon.adoc[]
 include::blocks/preface.adoc[]
 
 include::blocks/introduction.adoc[]
+
+include::blocks/microservices.adoc[]
