--- a/src/docs/asciidoc/Developer-Master.adoc
+++ b/src/docs/asciidoc/Developer-Master.adoc
@@ -1,7 +1,7 @@
 :title: Developer Master
 :author: CSoftZ - Carlos Adolfo Ortiz Q.
 :email:  carlosaortiz@yahoo.com 
-:revnumber: 1.0.0.1
+:revnumber: 1.0.0.2
 :revdate:   {docdate}
 :subject: Developer Master
 :keywords: Java, .NET, Neo4j, Microservices.
@@ -24,3 +24,9 @@ include::blocks/preface.adoc[]
 include::blocks/introduction.adoc[]
 
 include::blocks/microservices.adoc[]
+
+include::blocks/unix-linux.adoc[]
+
+include::blocks/mac-osx-tips.adoc[]
+
+include::blocks/nativescript.adoc[]
