--- a/src/docs/asciidoc/Developer-Master.adoc
+++ b/src/docs/asciidoc/Developer-Master.adoc
@@ -30,3 +30,9 @@ include::blocks/unix-linux.adoc[]
 include::blocks/mac-osx-tips.adoc[]
 
 include::blocks/nativescript.adoc[]
+
+include::blocks/git.adoc[]
+
+include::blocks/cloud-computing.adoc[]
+
+include::blocks/reactive-programming.adoc[]
