Adds new content to DevOps

--- a/src/docs/asciidoc/Developer-Master.adoc
+++ b/src/docs/asciidoc/Developer-Master.adoc
@@ -25,6 +25,8 @@ include::blocks/introduction.adoc[]
 
 include::blocks/microservices.adoc[]
 
+include::blocks/devops.adoc[]
+
 include::blocks/unix-linux.adoc[]
 
 include::blocks/mac-osx-tips.adoc[]
