--- a/src/docs/asciidoc/blocks/mac-osx-tips.adoc
+++ b/src/docs/asciidoc/blocks/mac-osx-tips.adoc
@@ -1,22 +1,28 @@
-== macOS X Tips
+= macOS X Tips
 
-=== brew (http://brew.sh/)
+== brew (http://brew.sh/)
 log in in a terminal window as root user.
 
+[source,terminal]
+----
 To install
 # ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)
 
 to update
 # brew update
+----
 
-=== ruby
+== ruby
 log in in a terminal window as root user.
 
 If you need to update ruby https://coolestguidesontheplanet.com/upgrading-ruby-osx/
 
+[source,terminal]
+----
 # brew install ruby
 
 Update ruby
 
 gem update --system
+----
 
