--- a/src/docs/asciidoc/Developer-Master.adoc
+++ b/src/docs/asciidoc/Developer-Master.adoc
@@ -1,7 +1,7 @@
 :title: Developer Master
 :author: CSoftZ - Carlos Adolfo Ortiz Q.
 :email:  carlosaortiz@yahoo.com 
-:revnumber: 1.0.0.2
+:revnumber: 1.0.0.5
 :revdate:   {docdate}
 :subject: Developer Master
 :keywords: Java, .NET, Neo4j, Microservices.
@@ -44,3 +44,6 @@ include::blocks/reactive-programming.adoc[]
 include::blocks/sql-adoc[]
 
 include::blocks/no-sql.adoc[]
+
+include::blocks/links.adoc[]
+
