Adds interesting links to git.adoc chapter

--- a/src/docs/asciidoc/blocks/git.adoc
+++ b/src/docs/asciidoc/blocks/git.adoc
@@ -1,3 +1,8 @@
 = Git
 
 == Setup
+
+A very comprehensive article about git-flow can be found here.
+http://nvie.com/posts/a-successful-git-branching-model/
+
+And SourceTree git client has a tutorial for git-flow as well.
